# ptx-emulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  base_types.h  cuda_device_runtime_api.h  fft_report.html  host_runtime.h  test.cpp  v100_results.csv
.github/workflows/: codeql-analysis.yml  main.yml  ptx-integration.yml  static-analysis-pr.yml  static-analysis.yml
app/: CMakeLists.txt
app/context/: CMakeLists.txt  block_context.cpp  block_context.h  global_context.cpp  global_context.h  profiler.cpp  profiler.h  thread_context.h  warp_context.cpp  warp_context.h
app/emulator/: CMakeLists.txt  main.cpp
app/execution/: CMakeLists.txt  execution_module.cpp  execution_module.h  execution_module_iterator.cpp
app/ptx/: CMakeLists.txt  basic_block.cpp  basic_block.h  function.cpp  function.h  module.cpp  module.h
app/ptx/codegen/: autogen.py  instructions.json
app/ptx/codegen/templates/: instruction.cpp.j2  instruction.h.j2  ptx_types.h.j2
app/ptx_asm/: CMakeLists.txt  execution.cpp  function.cpp  function.h  module.cpp  module.h
app/ptx_asm/codegen/: autogen.py  instructions.json  profiling_metrics.json
app/ptx_asm/codegen/autogen/: instructions.cpp  instructions.h  ptx_types.cpp  ptx_types.h
app/ptx_asm/codegen/templates/: executors.hpp.j2  instruction.cpp.j2  instruction.h.j2  ptx_types.cpp.j2  ptx_types.h.j2
app/ptx_asm/instruction_executors/: execution_functions.cpp  execution_functions.h  executors.cpp  executors.tpp  profilers.tpp
app/ptx_asm/reg_utils/: ptx_conversion.h  ptx_maths.h  ptx_reg_storage.h  ptx_type_traits.h
app/runtime/: CMakeLists.txt  rt_interface.cpp  rt_interface.h  rt_stream.cpp  rt_stream.h  runtime_def.cpp  runtime_def.h
app/utils/: CMakeLists.txt  constant.h  deferred_object.h  gpu_config.cpp  gpu_config.h  logger.h  types.h  utils.h
bench16k/: run_emu.sh  run_gpu.sh
bench16k/results/: emu_results.csv  emu_table.tex
bench16k/src/: attention_bench.cu  cg_bench.cu  fft_bench.cu  gelu_bench.cu  mmul_bench.cu  softmax_bench.cu  vadd_bench.cu
configs/: a100.toml  h800.toml  v100.toml
ptx_sources/: VectorAdd.cu
report/: TODO.md  main.tex  references.bib  report.txt  title.tex
report/chapters/: abbreviations.tex  abstract.tex  appendix_a.tex  appendix_b.tex  appendix_c.tex  appendix_d.tex  appendix_e.tex  appendix_f.tex  ch1_intro.tex  ch2_theory.tex  ch3_ldpreload.tex  ch4_parser.tex  ch5_execution.tex  ch6_divergence.tex  ch7_profiling.tex  ch8_testing.tex  ch9_conclusion.tex
src/: CMakeLists.txt
src/common/: architecture.h
src/context/: block_context.h  global_context.h  thread_context.h  warp_context.h
src/global_context/: block_context.h  global_context.h
src/ptx_code/: basic_block.h  function.h  instruction.h  types.h
test/: CMakeLists.txt
test/ptx_sources/: CMakeLists.txt  VectorAdd.cu  attention  attention_custom.cu  bank_conflicts.cu  branch_divergence.cu  conjugate_gradient.cu  cuemu_io.h  fft  fft_custom.cu  gelu  gelu_custom.cu  global_coalescing.cu  mmul  mmul.ptx  mmul_custom.cu  softmax_custom.cu  test  vadd  vadd.cu  vadd.ptx  vadd_custom.cu
test/unit/: .clang-tidy  CMakeLists.txt  ptx_basic_block_test.cpp  ptx_function_test.cpp  ptx_module_test.cpp  test_barrier.cpp  test_coalescing.cpp  test_executors.cpp  test_ptx_asm.cpp
tools/: CMakeLists.txt  ptx_profiler
tools/ptx_report/: __main__.py  aggregator.py  parser.py  ptx_parser.py  renderer.py
